Add user CRUD operations, dark mode, and documentation
- Added Create and Delete operations for users (Admin)

- Implemented dark mode with user preferences

- Added database migration for IsDarkMode

- Added book covers to wwwroot/covers

- Created architecture and deployment documentation

- Added project requirements analysis

- UI and functionality improvements

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,5 @@ FodyWeavers.xsd
 .idea/
 *.sln.iml
 
+# Production appsettings (zawiera wrażliwe dane - connection strings, hasła)
+appsettings.Production.json
