Remove internal documentation from repository
- Removed ANALIZA_WYMAGAN.md, DOKUMENTACJA_ARCHITEKTURA_I_PUBLIKACJA.md, PUBLISH.md, README.md from Git

- Added documentation files to .gitignore for internal use only

- Full project documentation will be created at the end

--- a/.gitignore
+++ b/.gitignore
@@ -363,5 +363,12 @@ FodyWeavers.xsd
 .idea/
 *.sln.iml
 
+# Dokumentacja wewnętrzna (nie commitujemy do repozytorium)
+ANALIZA_WYMAGAN.md
+DOKUMENTACJA_ARCHITEKTURA_I_PUBLIKACJA.md
+PUBLISH.md
+PUBLIKACJA_AZURE_KROK_PO_KROKU.md
+README.md
+
 # Production appsettings (zawiera wrażliwe dane - connection strings, hasła)
 appsettings.Production.json
